--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,9 +5,10 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
+      - API_URL=webclientconsul:5001
     ports:
-      - "80"
-      - "443"
+      - "5050:80"
+      - "5051:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
