--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     build:
       context: .
       dockerfile: ApiGateway/Dockerfile
-    ports:
-      - 5000:80
     depends_on:
       - consul
+    networks:
+      - default_network      
+    #network_mode: host
 
   consul:
     image: consul:1.7.3
@@ -22,6 +23,7 @@ services:
       - 127.0.0.1:8500:8500
       - 127.0.0.1:8600:8600
     command: consul agent -dev -ui -client 0.0.0.0
+   
 
   consul-config-loader:
     image: jhipster/consul-config-loader:v0.4.1
@@ -37,3 +39,9 @@ services:
       # as configured in central-server-config/git2consul.json
       # Also set SPRING_CLOUD_CONSUL_CONFIG_FORMAT=files on your apps
       # - CONFIG_MODE=git
+    
+
+
+networks:
+  default_network:
+    external: true 
