--- a/docker/consul.yml
+++ b/docker/consul.yml
@@ -1,18 +1,20 @@
 # This configuration is intended for development purpose, it's **your** responsibility to harden it for production
-version: '2'
+version: '3.4'
 services:
   consul:
     image: consul:1.7.3
+    container_name: consul
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
       - 127.0.0.1:8300:8300
-      - 127.0.0.1:8500:8500
+      - 8500:8500
       - 127.0.0.1:8600:8600
     command: consul agent -dev -ui -client 0.0.0.0
 
   consul-config-loader:
     image: jhipster/consul-config-loader:v0.4.1
+    container_name: consul_config_loader
     volumes:
       - ./central-server-config:/config
     environment:
