--- a/docker/consul.yml
+++ b/docker/consul.yml
@@ -1,4 +1,6 @@
 # This configuration is intended for development purpose, it's **your** responsibility to harden it for production
+#https://www.consul.io/docs/agent/options
+#https://learn.hashicorp.com/consul
 version: '3.4'
 services:
   consul:
@@ -10,7 +12,7 @@ services:
       - 127.0.0.1:8300:8300
       - 8500:8500
       - 127.0.0.1:8600:8600
-    command: consul agent -dev -ui -client 0.0.0.0
+    command: consul agent -dev -ui #-client 10.0.18.30
 
   consul-config-loader:
     image: jhipster/consul-config-loader:v0.4.1
