--- a/docker/consul.yml
+++ b/docker/consul.yml
@@ -4,7 +4,7 @@
 version: '3.4'
 services:
   consul:
-    image: consul:1.7.3
+    image: consul:1.9
     container_name: consul
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
@@ -12,7 +12,7 @@ services:
       - 127.0.0.1:8300:8300
       - 8500:8500
       - 127.0.0.1:8600:8600
-    command: consul agent -dev -ui #-client 10.0.18.30
+    command: consul agent -dev -ui -client 127.0.0.1
 
   consul-config-loader:
     image: jhipster/consul-config-loader:v0.4.1
