--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,8 +6,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "5150:80"
-      - "5151:443"
+      - "5150:80"  #http
+      - "5151:443" #https
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
