--- a/ApiGateway/ApiGateway.csproj
+++ b/ApiGateway/ApiGateway.csproj
@@ -6,6 +6,8 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <RootNamespace>Compuletra.ApiGateway</RootNamespace>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <StartupObject>Compuletra.ApiGateway.Program</StartupObject>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
