--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,7 +7,7 @@ services:
       - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
       - "5150:80"  #http
-      - "5151:443" #https
+      #- "5151:443" #https
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
