--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,10 +4,10 @@ services:
   apigateway:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_URLS=http://+:80 #;https://+:443
     ports:
       - "5050:80"
-      #- "443"
-    # volumes:
-    #   - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
-    #   - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
+      #- "5051:443"
+    volumes:
+      - ${HOME}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${HOME}/ASP.NET/Https:/root/.aspnet/https:ro
