--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,8 @@ version: '3.4'
 
 services:
   apigateway:
-    image: 10.0.18.30:8082/compuletra.api.gateway
+    image: 10.0.18.30:8082/compuletra.api.gateway:latest
     container_name: gateway
     build:
       context: .
       dockerfile: ApiGateway/Dockerfile
-    # depends_on:
-    #   - consul
-      
