Add Serilog conection to es

--- a/ApiGateway/appsettings.Development.json
+++ b/ApiGateway/appsettings.Development.json
@@ -8,5 +8,30 @@
   },
   "Security": {
     "EnforceHttps": false
+  },
+  "Serilog": {
+    "MinimumLevel": "Verbose",
+    "SyslogUrl": "localhost",
+    "SyslogPort": "6514",
+    "SyslogAppName": "Gateway",
+    "WriteTo": [
+      {
+        "Name": "Elasticsearch",
+        "Args": {
+          "nodeUris": "http://elastic:changeme@localhost:9200/",
+          "indexFormat": "compuletra-gateway-{0:yyyy.MM}",
+          "autoRegisterTemplate": true,
+          "autoRegisterTemplateVersion": "ESv7",
+          "connectionGlobalHeaders": "username=elastic;password=changeme"
+        }
+      },
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u4} {ProcessId} --- [{ThreadId,3}] {LoggerName,-40} : {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
