--- a/ApiGateway/appsettings.json
+++ b/ApiGateway/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": "Verbose",
+    "Override": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Microsoft": "Information",
+      "System": "Information"
+    },
+    "SyslogUrl": "localhost",
+    "SyslogPort": "6514",
+    "SyslogAppName": "Gateway",
+    "Enrich": [ "FromLogContext", "WithProcessId", "WithThreadId" ]
   },
   "AllowedHosts": "*",
   "Security": {
