--- a/ApiGateway/Properties/launchSettings.json
+++ b/ApiGateway/Properties/launchSettings.json
@@ -25,6 +25,15 @@
       },
       "applicationUrl": "https://localhost:5050;http://localhost:5051"
     },
+    "ApiGateway Production": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "launchUrl": "swagger/index.html",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      },
+      "applicationUrl": "https://localhost:5050;http://localhost:5051"
+    },
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
