--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,8 @@ services:
     build:
       context: .
       dockerfile: ApiGateway/Dockerfile
+
+networks:
+  default:
+    external:
+      name: compuletra
