remove kafka from serilog write to

--- a/ApiGateway/appsettings.Production.json
+++ b/ApiGateway/appsettings.Production.json
@@ -1,49 +1,39 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Serilog": {
-    "MinimumLevel": "Information",
-    "SyslogUrl": "localhost",
-    "SyslogPort": "6514",
-    "SyslogAppName": "Gateway",
-    "WriteTo": [
-      {
-        "Name": "Kafka",
-        "Args": {
-          "batchSizeLimit": "50",
-          "period": "5",
-          "bootstrapServers": "10.0.18.30:9092",
-          "topic": "log-system"
-        }
-      },
-      {
-        "Name": "Elasticsearch",
-        "Args": {
-          "nodeUris": "http://elastic:changeme@10.0.18.30:9200/",
-          "indexFormat": "compuletra-gateway-{0:yyyy.MM}",
-          "autoRegisterTemplate": true,
-          "autoRegisterTemplateVersion": "ESv7",
-          "connectionGlobalHeaders": "username=elastic;password=changeme"
-        }
-      },
-      {
-        "Name": "Console",
-        "Args": {
-          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u4} {ProcessId} --- [{ThreadId,3}] {LoggerName,-40} : {Message:lj}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "app.log",
-          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u4} {ProcessId} --- [{ThreadId,3}] {LoggerName,-40} : {Message:lj}{NewLine}{Exception}",
-          "fileSizeLimitBytes": 10240,
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 90
-        }
-      }
-    ]
-  }
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
+    "Serilog": {
+        "MinimumLevel": "Information",
+        "SyslogUrl": "localhost",
+        "SyslogPort": "6514",
+        "SyslogAppName": "Gateway",
+        "WriteTo": [{
+                "Name": "Elasticsearch",
+                "Args": {
+                    "nodeUris": "http://elastic:changeme@10.0.18.30:9200/",
+                    "indexFormat": "compuletra-gateway-{0:yyyy.MM}",
+                    "autoRegisterTemplate": true,
+                    "autoRegisterTemplateVersion": "ESv7",
+                    "connectionGlobalHeaders": "username=elastic;password=changeme"
+                }
+            },
+            {
+                "Name": "Console",
+                "Args": {
+                    "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u4} {ProcessId} --- [{ThreadId,3}] {LoggerName,-40} : {Message:lj}{NewLine}{Exception}"
+                }
+            },
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "app.log",
+                    "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u4} {ProcessId} --- [{ThreadId,3}] {LoggerName,-40} : {Message:lj}{NewLine}{Exception}",
+                    "fileSizeLimitBytes": 10240,
+                    "rollingInterval": "Day",
+                    "retainedFileCountLimit": 90
+                }
+            }
+        ]
+    }
 }
